Fixed best-value position on smaller screens

--- a/css/queries.css
+++ b/css/queries.css
@@ -220,6 +220,12 @@
 		grid-column: span 2;
 		margin-bottom: 3.2rem;
 	}
+
+	/* *** */
+	.pricing-plan--complete::after {
+		top: 6%;
+		right: -20%;
+	}
 }
 
 /**************************/
@@ -291,6 +297,12 @@
 	.cta-img-box {
 		height: 40rem;
 		grid-row: 1;
+	}
+
+	/* *** */
+	.pricing-plan--complete::after {
+		top: 6%;
+		right: -12%;
 	}
 }
 
